src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>colorTheme__c</fullName>
        <defaultValue>&quot;Spectacular Sunset&quot;</defaultValue>
        <label>Color Theme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beautiful Blue</fullName>
                </value>
                <value>
                    <fullName>Glorious Green</fullName>
                </value>
                <value>
                    <fullName>Pretty Pink</fullName>
                </value>
                <value>
                    <fullName>Pleasant Purple</fullName>
                </value>
                <value>
                    <fullName>Wonderful White</fullName>
                </value>
                <value>
                    <fullName>Rosy Red</fullName>
                </value>
                <value>
                    <fullName>Spectacular Sunset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fragrance__c</fullName>
        <label>Fragrance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Gardenia</fullName>
                </value>
                <value>
                    <fullName>Jasmine</fullName>
                </value>
                <value>
                    <fullName>Lilly of the Valley</fullName>
                </value>
                <value>
                    <fullName>Rose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>glow__c</fullName>
        <label>Glow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Steady Glow</fullName>
                </value>
                <value>
                    <fullName>Pulsing Glow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>numberOfFlowers__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Number of Flowers</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percentOfOpening__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How open are the flowers in the bouquet?</description>
        <inlineHelpText>How open are the flowers in the bouquet?</inlineHelpText>
        <label>Percent of Flower Opening</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Products_BOTanicals</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>numberOfFlowers__c</columns>
        <columns>colorTheme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>startsWith</operation>
            <value>BOT</value>
        </filters>
        <label>All Products (BOTanicals)</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>